# abadia-be

./: .gitignore  README.md
app/: .env.sample  .gitignore  Cargo.toml  README.md
app/src/: main.rs
app/src/db/: authors.rs  countries.rs  languages.rs  mod.rs
app/src/gql/: authors.rs  books.rs  context.rs  countries.rs  languages.rs  mod.rs  objects.rs
app/src/gql/models/: authors.rs  books.rs  countries.rs  humans.rs  languages.rs  mod.rs  publishers.rs  texts.rs
app/src/gql/models/bioentries/: bioentry.rs  db.rs  mod.rs  mutations.rs  queries.rs
app/src/gql/models/books/: book.rs  db.rs  loader.rs  mod.rs  mutations.rs  queries.rs
app/src/gql/models/countries/: country.rs  loader.rs  mod.rs  mutations.rs  queries.rs
app/src/gql/models/humans/: db.rs  human.rs  loader.rs  mod.rs  mutations.rs  queries.rs
app/src/gql/models/languages/: db.rs  language.rs  languagedb.rs  mod.rs
app/src/gql/models/publishers/: mod.rs  publisher.rs
app/src/gql/models/texts/: db.rs  loader.rs  mod.rs  mutations.rs  queries.rs  text.rs  textdb.rs
app/src/model/: mod.rs
app/src/observability/: metrics.rs
app/src/routes/: mod.rs
app/src/utils/: db.rs  mod.rs
db/: docker-compose.yml
db/dataset/: init.sql
